--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="#profil" class="hover:text-green-400 transition duration-300">Profil</a>
                 <a href="#jurusan" class="hover:text-green-400 transition duration-300">Jurusan TKJ</a>
                 <a href="#fasilitas" class="hover:text-green-400 transition duration-300">Fasilitas Lab</a>
-                <a href="#kontak" class="hover:text-green-400 transition duration-300">Kontak</a>
+                <a href="kontak.html" class="hover:text-green-400 transition duration-300">Kontak</a>
             </div>
             <button class="md:hidden text-2xl text-green-400 focus:outline-none" onclick="toggleMenu()">
                 &#9776; <!-- Hamburger Icon -->
