--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="hidden md:flex space-x-8 text-sm font-medium">
                 <a href="#home" class="hover:text-green-400 transition duration-300">Home</a>
-                <a href="#profil" class="hover:text-green-400 transition duration-300">Profil</a>
+                <a href="profil.html" class="hover:text-green-400 transition duration-300">Profil</a>
                 <a href="#jurusan" class="hover:text-green-400 transition duration-300">Jurusan TKJ</a>
                 <a href="#fasilitas" class="hover:text-green-400 transition duration-300">Fasilitas Lab</a>
                 <a href="kontak.html" class="hover:text-green-400 transition duration-300">Kontak</a>
