--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- Hero Section -->
         <section id="home" class="container mx-auto px-6 py-24 md:py-36 text-center">
             <h1 class="text-4xl sm:text-6xl md:text-7xl font-extrabold mb-4 code-font">
-                <span class="neon-text">NETWORK ACCESS GRANTED</span>
+                <span class="neon-text">SMK ISLAM MALAHAYATI</span>
             </h1>
             <p id="typewriter-text" class="text-xl sm:text-2xl mb-8 text-green-300 h-8 code-font"></p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6">
